--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
-}
+/* src/App.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: black;
   color: white;
+  overflow: auto;
+  position: relative; /* 위치 설정 */
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  /* background: linear-gradient(45deg, #503a8c, #b492c1); */
+  background-image: url("../public/images/bg_001.jpg");
+  background-size: cover;
+  padding: 20px;
+  text-align: center;
+  height: 15vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header span {
+  font-size: 4rem; /* 글씨 크기 조정 */
+  font-family: 'Poppins', sans-serif; /* 마법과 몽환적인 느낌의 글꼴 */
+  color: #b492c1;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  padding: 10px;
+  overflow-x: auto; /* 가로 스크롤 가능 */
+}
+
+.scrollable-tabs {
+  display: flex;
+  white-space: nowrap; /* 한 줄로 유지 */
+}
+
+.scrollable-tabs a {
+  color: white;
+  margin: 0 15px;
+  text-decoration: none;
+  padding: 10px 15px;
+  position: relative;
+  transition: transform 0.2s; /* 애니메이션 추가 */
+  min-width: 20px; /* 각 탭의 최소 너비 설정 */
+}
+
+.scrollable-tabs a:hover {
+  transform: scale(1.1); /* 호버 시 커지는 효과 */
+}
+
+.scrollable-tabs a:active {
+  animation: sparkle 0.5s forwards; /* 클릭 시 스파클 애니메이션 */
+}
+
+@keyframes sparkle {
+  0% {
+    transform: scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(139, 0, 255, 0.8), 
+                0 0 20px rgba(139, 0, 255, 0.6);
   }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
+
+.content {
+  padding: 20px;
+  text-align: center;
+  z-index: 1;
+  overflow-y: auto;
+}
+
+/* 모바일 화면에서의 스타일 조정 */
+@media (max-width: 768px) {
+
+  .scrollable-tabs a {
+    padding: 8px 0px; /* 모바일에서 패딩 조정 */
+    font-size: 1rem; /* 모바일에서 글씨 크기 조정 */
+  }
+}
+
+.fire{
+  position: relative;
+  margin-top: 28vh;
+  float: left;
+  z-index: 2;
+}
+
+.Day_content{
+  margin-left: 5vw;
+  overflow-y: auto;
+}
+
+.artist{
+  padding: 20px;
+  overflow-y: auto;
+}
+.artist_box{
+  margin-bottom: 20px;
+  overflow-y: auto;
+}
+.en_name{
+  font-size: 2rem;
+}
+.ko_name{
+  margin-left: 10px;
+}
+.artist_profil{
+  overflow-y: auto;
+}
+.artist_profil > img{
+  width: 300px;
+  height: 250px;
+  object-fit: cover;
 }
